--- a/root/supervisord.conf
+++ b/root/supervisord.conf
@@ -21,18 +21,9 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 [supervisorctl]
 serverurl=unix:///var/run/supervisor.sock ; use a unix:// URL  for a unix socket
 
-[program:php-fpm]
-command = /usr/sbin/php-fpm7.2 -R
-autostart=true
-autorestart=true
-priority=5
-stdout_logfile=/var/log/php-fpm7.log
-stdout_logfile_maxbytes=0
-stderr_logfile=/var/log/php-fpm.log
-stderr_logfile_maxbytes=0
-
 [program:nginx]
 command=/usr/sbin/nginx
+startsecs = 0
 autostart=true
 autorestart=true
 priority=10
@@ -41,6 +32,17 @@ stderr_events_enabled=true
 stdout_logfile=/var/log/nginx/access.log
 stdout_logfile_maxbytes=0
 stderr_logfile=/var/log/nginx/error.log
+stderr_logfile_maxbytes=0
+
+[program:php-fpm]
+command = /usr/sbin/php-fpm7.2 -R
+startsecs = 0
+autostart=true
+autorestart=false
+priority=5
+stdout_logfile=/var/log/php-fpm7.log
+stdout_logfile_maxbytes=0
+stderr_logfile=/var/log/php-fpm.log
 stderr_logfile_maxbytes=0
 
 [program:tail]
