--- a/root/supervisord.conf
+++ b/root/supervisord.conf
@@ -23,7 +23,7 @@ serverurl=unix:///var/run/supervisor.sock ; use a unix:// URL  for a unix socket
 
 [program:nginx]
 command=/usr/sbin/nginx
-startsecs = 0
+;startsecs = 0
 autostart=true
 autorestart=true
 priority=10
@@ -34,16 +34,16 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/var/log/nginx/error.log
 stderr_logfile_maxbytes=0
 
-[program:php-fpm]
-command = /usr/sbin/php-fpm7.2 -R
-startsecs = 0
-autostart=true
-autorestart=false
-priority=5
-stdout_logfile=/var/log/php-fpm7.log
-stdout_logfile_maxbytes=0
-stderr_logfile=/var/log/php-fpm.log
-stderr_logfile_maxbytes=0
+;[program:php-fpm]
+;command = /usr/sbin/php-fpm7.2 -R
+;startsecs = 0
+;autostart=true
+;autorestart=false
+;priority=5
+;stdout_logfile=/var/log/php-fpm7.log
+;stdout_logfile_maxbytes=0
+;stderr_logfile=/var/log/php-fpm.log
+;stderr_logfile_maxbytes=0
 
 [program:tail]
 command=/usr/bin/tail -f /var/log/nginx/error.log /var/log/php-fpm.log
